# pathy

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  codecov.yml  gcspath.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  python-package.yml  semantic_lint.yml
gcspath/: __init__.py  about.py  api.py  base.py  cli.py  client.py  file.py  gcs.py
pathy/: __init__.py  _gcs.py  _types.py  about.py  api.py  azure.py  base.py  cli.py  client.py  clients.py  file.py  gcs.py  pathmod.py  s3.py
pathy/_tests/: __init__.py  conftest.py  test_azure.py  test_base.py  test_cli.py  test_clients.py  test_file.py  test_gcs.py  test_pathmod.py  test_pathy.py  test_pathy_scandir.py  test_pure_pathy.py  test_s3.py  test_windows.py
pathy/tests/: conftest.py  test_base.py  test_cli.py  test_clients.py  test_file.py  test_gcs.py
tests/: conftest.py  test_api.py  test_base.py  test_cli.py  test_client.py  test_clients.py  test_file.py  test_misc.py  test_not_supported.py  test_package.py  test_path_operations.py  test_pure_path_operations.py  test_registry.py
tools/: build.bat  build.sh  ci-set-build-version.ts  clean.bat  clean.sh  codecov.bat  codecov.sh  deploy.sh  docs.py  docs.sh  format.bat  format.sh  lint.bat  lint.sh  setup.bat  setup.sh  test.bat  test.sh  test_package.bat  test_package.sh  test_readme.py  test_readme.sh
