[project]
name = "pathy"
description = "pathlib.Path subclasses for local and cloud bucket storage"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">= 3.10"
authors = [
    { name = "Justin DuJardin", email = "justin@dujardinconsulting.com" },
    { name = "Kai", email = "kai@dujardinconsulting.com" },
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["smart-open>=5.2.1", "typer>=0.3.0", "pathlib_abc>=0.5.2,<0.6"]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.0.0"]
s3 = ["boto3"]
azure = ["azure-storage-blob"]
test = ["pytest", "pytest-cov"]
all = ["pathy[gcs]", "pathy[s3]", "pathy[azure]", "pathy[test]"]

[project.scripts]
pathy = "pathy.cli:app"

[project.urls]
Homepage = "https://github.com/justindujardin/pathy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "mypy>=1.8.0",
    "flake8>=4.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "autoflake>=1.3.0",
    "twine>=4.0.0",
]

[tool.hatch.version]
path = "pathy/about.py"
pattern = '__version__: str = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["pathy"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pathy.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pathy._tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["pathy/_tests"]
